--- a/popup.html
+++ b/popup.html
@@ -6,18 +6,22 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>scroll2message</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
+        padding: 20px;
+        width: 300px;
       }
-      #status {
+      #status, #instructions {
         /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
+        /*white-space: pre;*/
+        /*text-overflow: ellipsis;*/
+        /*overflow: hidden;*/
+        max-width: 300px;
+        padding: 20px;
+        font-size: 12px;
+        background-color: #f0f0f0;
       }
     </style>
 
@@ -30,8 +34,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
+    <div id="instructions">Right-click on a message and choose "Set Message to Scroll to"</div>
     <div id="status"></div>
-    <img id="image-result" hidden>
   </body>
 </html>
-
